--- a/index.html
+++ b/index.html
@@ -430,21 +430,23 @@
         <section class="Acordeon">
             <h2>Últimos videos</h2>
             <button id="activado" class="Acordeon-button">Hola Mundo!</button>
-            <div class="contenido">
+            <div class="contenido Video__embed">
                 <!-- <img src="img/perfil1.jpeg" alt="" width="150" height="200"> -->
-                <p>PROXIMAMENTE</p>
+                <iframe width="370" height="215" src="https://www.youtube.com/embed/2ckqOukGKK8" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
             <button class="Acordeon-button">HTML</button>
-            <div class="contenido">
-                <!-- <img src="img/perfil2.png" alt="" width="150" height="200"> -->
-                <p>PROXIMAMENTE</p>
+            <div class="contenido Video__embed">
+                <iframe width="370" height="215" src="https://www.youtube.com/embed/pQObiL-ZYsw" frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
+
             <button class="Acordeon-button">CSS</button>
-            <div class="contenido">
-                <!-- <img src="img/perfil3.jpeg" alt="" width="150" height="200"> -->
-                <p>PROXIMAMENTE</p>
+            <div class="contenido Video__embed">
+                <iframe width="370" height="215" src="https://www.youtube.com/embed/Yya-rNwuxnc" frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
     </aside>
@@ -482,7 +484,7 @@
         <!-- Modal content -->
         <div class="Modal-content">
             <form class="contact_form"
-                action="https://getsimpleform.com/messages?form_api_token=e8ec1ae526c6c428f948668873550fb7"
+                action="https://formsubmit.co/cursosit2020@gmail.com.com"
                 method="post" name="contact_form">
                 <input type='hidden' name='redirect_to' value='http://cursosit.com' />
                 <input name="nombre" type="text" placeholder="Tu nombre" required>
