--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
         <!-- Modal content -->
         <div class="Modal-content">
             <form class="contact_form"
-                action="https://formsubmit.co/cursosit2020@gmail.com"
+                action="42eba2f547c00008c349ec4c42eef66"
                 method="post" name="contact_form">
                 <input type='hidden' name='redirect_to' value='http://cursosit.com' />
                 <input name="nombre" type="text" placeholder="Tu nombre" required>
