--- a/index.html
+++ b/index.html
@@ -486,8 +486,10 @@
             <form class="contact_form"
                 action="https://formsubmit.co/42eba2f547c00008c349ec4c42eef665"
                 method="post" name="contact_form">
-                <input type='hidden' name='redirect_to' value='http://cursosit.com' />
-                <input type="hidden" name="_captcha" value="false">
+                <input type='hidden' name='_next' value='http://cursosit.com/welcome' />
+
+
+                <!-- <input type="hidden" name="_captcha" value="false"> -->
                 <input name="nombre" type="text" placeholder="Tu nombre" required>
                 <input name="email" type="email" placeholder="Tu email" required>
                 <textarea name="msje" placeholder="Tu mensaje" required></textarea>
