--- a/index.html
+++ b/index.html
@@ -488,8 +488,10 @@
                 method="post" name="contact_form">
                 <input type='hidden' name='_next' value='http://cursosit.com/welcome' />
 
+                <input type="text" name="_honey" style="display:none">
 
-                <!-- <input type="hidden" name="_captcha" value="false"> -->
+
+                <input type="hidden" name="_captcha" value="false">
                 <input name="nombre" type="text" placeholder="Tu nombre" required>
                 <input name="email" type="email" placeholder="Tu email" required>
                 <textarea name="msje" placeholder="Tu mensaje" required></textarea>
