create after-submit.html and update home form

--- a/index.html
+++ b/index.html
@@ -486,16 +486,13 @@
             <form class="contact_form"
                 action="https://formsubmit.co/42eba2f547c00008c349ec4c42eef665"
                 method="post" name="contact_form">
-                <input type='hidden' name='_next' value='http://cursosit.com/welcome' />
-
+                <input type='hidden' name='_next' value='http://cursosit.com/after-submit.html' />
                 <input type="text" name="_honey" style="display:none">
-
-
                 <input type="hidden" name="_captcha" value="false">
                 <input name="nombre" type="text" placeholder="Tu nombre" required>
                 <input name="email" type="email" placeholder="Tu email" required>
                 <textarea name="msje" placeholder="Tu mensaje" required></textarea>
-                <button class="button button--form" type="submit" id="contact-submit">Enviar</button>
+                <button class="button button--form" type="submit">Enviar</button>
             </form>
             <span class="Modal-close">&times;</span>
         </div>
