--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         gtag('config', 'UA-167239185-1');
     </script>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
