--- a/bitcoin-payment.html
+++ b/bitcoin-payment.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167239185-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-167239185-1');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
@@ -89,8 +98,24 @@
         </section>
         <div>
             <form class="contact_form"
-                action="https://getsimpleform.com/messages?form_api_token=e8ec1ae526c6c428f948668873550fb7"
+                action="https://formsubmit.co/42eba2f547c00008c349ec4c42eef665"
                 method="post" name="contact_form">
+                <input type='hidden' name='_next' value='http://cursosit.com/after-submit.html' />
+                <input type="text" name="_honey" style="display:none">
+                <input type="hidden" name="_captcha" value="false">
+                <input name="nombre" type="text" placeholder="Tu nombre" required>
+                <input name="email" type="email" placeholder="Tu email" required>
+                <textarea name="msje" placeholder="Tu mensaje" required></textarea>
+                <button class="button button--form" type="submit">Enviar</button>
+            </form>
+            <form class="contact_form"
+                action="https://formsubmit.co/42eba2f547c00008c349ec4c42eef665"
+                method="post" name="contact_form">
+            
+                <input type='hidden' name='_next' value='http://cursosit.com/after-submit.html' />
+                <input type="text" name="_honey" style="display:none">
+                <input type="hidden" name="_captcha" value="false">
+
                 <h4>Completá el formulario para dar aviso de la transacción</h4>
                 <!-- <input type='hidden' name='redirect_to' value='http://cursosit.com' /> -->
                 <span style="color: red; font-size: 0.7rem">obligatorio</span><br><input name="nombre" type="text"
