--- a/bitcoin-payment.html
+++ b/bitcoin-payment.html
@@ -102,15 +102,15 @@
                 action="https://formsubmit.co/42eba2f547c00008c349ec4c42eef665"
                 method="post" name="contact_form">
             
-                <input type='hidden' name='_next' value='http://cursosit.com/after-submit.html' />
+                <input type='hidden' name='_next' value='http://cursosit.com/bitcoin-aviso.html' />
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_captcha" value="false">
 
                 <h4>Completá el formulario para dar aviso de la transacción</h4>
                 <!-- <input type='hidden' name='redirect_to' value='http://cursosit.com' /> -->
-                <span style="color: red; font-size: 0.7rem">obligatorio</span><br><input name="nombre" type="text"
+                <span style="color: red; font-size: 0.7rem">*obligatorio</span><br><input name="nombre" type="text"
                     placeholder="Tu nombre" required><br><br>
-                <span style="color: red; font-size: 0.7rem">obligatorio</span><br><input name="email" type="email"
+                <span style="color: red; font-size: 0.7rem">*obligatorio</span><br><input name="email" type="email"
                     placeholder="Tu email" required><br><br>
                 <input name="id-transaction" type="number" placeholder="Id de transacción"><br><br>
                 <textarea name="msje" placeholder="Observaciones"></textarea><br><br>
