add videos links

--- a/blogCss.html
+++ b/blogCss.html
@@ -73,6 +73,8 @@
                 <figure>
                     <img src="img/blog/css/css-logo.png" alt="logo CSS3">
                 </figure>
+                <a href="https://youtu.be/HwqouVIulKk" target="_blank" rel="noopener noreferrer">Ver video tutorial de este artículo</a>
+
                 <h2>CSS</h2>
                 <h4>CSS son las iniciales de “Cascading Style Sheets” (Hojas de Estilo en Cascada).</h4>
                 <p>"Cascada" se refiere a cierto orden de prioridad en que se aplicarán los estilos para un mismo elemento. Este concepto se comprenderá mejor a medida que se avanze en el aprendizaje.</p>
