--- a/blogHtml.html
+++ b/blogHtml.html
@@ -75,6 +75,7 @@
                 <figure>
                     <img src="img/blog/html/HTML5_Logo_256.png" alt="logo html5">
                 </figure>
+                <a href="https://youtu.be/CO9aTxjTRqc" target="_blank" rel="noopener noreferrer">Ver video tutorial de este artículo</a>
                 <h2>HTML</h2>
                 <h4>HTML5 hace referencia a la última versión de HTML.</h4>
                 <p>“HyperText Markup Language“ (Lenguaje de Marcado de Hipertextos).
