--- a/thanks-activate.html
+++ b/thanks-activate.html
@@ -36,6 +36,16 @@
         section {
             width: 50vw;
         }
+        /* @media (max-width: 800px) {
+            section {
+            width: 90vw;
+        }
+        
+            form {
+            width: 90vw;
+        }
+
+    } */
 
         .div {
             display: flex;
