responsive after-submit

--- a/after-submit.html
+++ b/after-submit.html
@@ -16,19 +16,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mensaje enviado</title>
     <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/welcome.css">
     <style>
         html {
             background-color: whitesmoke;
             color: black;
+            text-align: center;
+        }
+        body {
+            text-align: center;
+            
+        }
+        main {
+            width: 90vw;
+            text-align: center;
+            padding: 1rem;
         }
     </style>
 </head>
 
 <body>
-    <main>
-        <h1>Tu mensaje a sido enviado con éxito!!<br>Te responderemos a la mayor brevedad posible.</h1>
+    <main style="margin: 0;">
+        <h1 style="font-size: 1.2rem;">Tu mensaje a sido enviado con éxito!!<br>Te responderemos a la mayor brevedad posible.</h1>
         
     <br>
     <br>
