responsive after-submit

--- a/after-submit.html
+++ b/after-submit.html
@@ -17,35 +17,23 @@
     <title>Mensaje enviado</title>
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="css/welcome.css">
-    <style>
-        html {
-            background-color: whitesmoke;
-            color: black;
-            text-align: center;
-        }
-        body {
-            text-align: center;
-            
-        }
-        main {
-            width: 90vw;
-            text-align: center;
-            padding: 1rem;
-        }
-    </style>
+    <!-- <link rel="stylesheet" href="css/welcome.css"> -->
+    <link rel="stylesheet" href="css/after-submit.css">
+   
 </head>
 
 <body>
-    <main style="margin: 0;">
-        <h1 style="font-size: 1.2rem;">Tu mensaje a sido enviado con éxito!!<br>Te responderemos a la mayor brevedad posible.</h1>
+    <main>
+        <h1>Tu mensaje a sido enviado con éxito!!<br>Te responderemos a la mayor brevedad posible.</h1>
         
     <br>
     <br>
-        <img style="margin: auto;" src="img/logo.png" alt="">
+        <img src="img/logo.png" alt="">
         <br>
         <br>
-        <a href="index.html">volver</a>
+        <br>
+        <br>
+        <a class="volver" href="index.html">volver</a>
         <a class="Contacto__whatsapp" href="https://wa.me/543513044157" target="_blank" rel="noopener noreferrer">
             <img src="img/whatsapp-logo.png" alt="contacto whatsapp">
         </a>
