responsive btc-payment

--- a/bitcoin-payment.html
+++ b/bitcoin-payment.html
@@ -17,6 +17,7 @@
     <title>Bitcoin Payment</title>
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <!-- <link rel="stylesheet" href="css/welcome.css"> -->
+    <link rel="stylesheet" href="css/btc-pay.css">
     <style>
         html {
             font-family: 'Roboto', Helvetica, sans-serif;
@@ -33,9 +34,9 @@
             flex-direction: column;
         }
 
-        section {
+        /* section {
             width: 50vw;
-        }
+        } */
 
         .div {
             display: flex;
