--- a/bitcoin-aviso.html
+++ b/bitcoin-aviso.html
@@ -16,8 +16,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido</title>
     <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/welcome.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <!-- <link rel="stylesheet" href="css/welcome.css"> -->
+    <link rel="stylesheet" href="css/after-submit.css">
+
     <style>
         html {
             background-color: whitesmoke;
@@ -35,7 +37,7 @@
         <img style="margin: auto;" src="img/logo.png" alt="">
         <br>
         <br>
-        <a href="bitcoin-payment.html">volver</a>
+        <a class="volver" href="bitcoin-payment.html">volver</a>
         <a class="Contacto__whatsapp" href="https://wa.me/543513044157" target="_blank" rel="noopener noreferrer">
             <img src="img/whatsapp-logo.png" alt="contacto whatsapp">
         </a>
