--- a/thanks-activate.html
+++ b/thanks-activate.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
     <title>Gracias</title>
     <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <!-- <link rel="stylesheet" href="css/welcome.css"> -->
+    <link rel="stylesheet" href="css/thanks-activate.css">
     <style>
         html {
             font-family: 'Roboto', Helvetica, sans-serif;
@@ -57,9 +57,7 @@
             align-self: center;
         } */
 
-        form {
-            margin-bottom: 3rem;
-        }
+  
 
         input {
             width: 100%;
@@ -75,9 +73,7 @@
 
         }
 
-        form {
-            width: 50vw;
-        }
+        
 
         .Contacto__whatsapp {
             position: fixed;
@@ -86,7 +82,7 @@
         }
         .button {
             border: 2px solid #0f86f7;
-            width: 80pxpx;
+            width: 80px;
             height: 35px;
             background-color: transparent;
             cursor: pointer;
