--- a/curso.html
+++ b/curso.html
@@ -87,10 +87,10 @@
                 </ul>
                 <div class="Info__box">
                     <ul>
-                        <li>100% online CLASES EN VIVO</li>
+                        <li>100% ONLINE CLASES EN VIVO</li>
                         <li>GRUPO MÁXIMO DE 10 ALUMNOS</li>
-                        <li>Duración 2 meses - TOTAL 36HS</li>
-                        <li>Comienza 18 de agosto</li>
+                        <li>DURACIÓN 2 MESES - TOTAL 36HS</li>
+                        <li>COMIENZA 18 DE AGOSTO</li>
                     </ul>
                 </div>
             </section>
@@ -259,7 +259,7 @@
                 </div>
                 <div class="Pago__box Pago__box--1" id="mpago">
                     <figure><img src="img/MPago-horizontal-small.png" alt=""></figure>
-                    <h3 class="precios">$2800</h3>
+                    <h3 class="precios_p">$2800</h3>
                     <h4><del>$3500</del> <span>20% desc por inscripción antes del 11/08/20</span></h4>
         
                     <div class="Pago__boton">
